--- a/index.ipynb
+++ b/index.ipynb
@@ -5,13 +5,12 @@
    "metadata": {},
    "source": [
     "- 計算理論基礎\n",
-    "  - 教材\n",
+    "  - 教材: *Introcuction to Theory of computation* by Micheal Sipser Ist Ed.\n",
     "  - [期末資料](http://localhost:8888/notebooks/Documents/notebook/%E5%AD%B8%E7%BF%92%E8%B3%87%E6%96%99%E5%8C%AF%E7%B8%BD/%E8%A8%88%E7%AE%97%E7%90%86%E8%AB%96%E5%9F%BA%E7%A4%8E/%E6%9C%9F%E6%9C%AB%E8%80%83%E8%A9%A6%EF%BC%88%E9%9B%B7%E8%98%8A%E5%A5%87%EF%BC%89/index.ipynb)\n",
     "  - 其它\n",
     "- 計算智能\n",
-    "  - 教材\n",
-    "  - [期末資料](計算智能/期末考試（李翠華、曲延雲）/index.ipynb)\n",
-    "  - 其它"
+    "  - 教材：*Artificial Intelligence A Modern Approach, 3rd Edition* by Stuart J. Russell, Peter Norvig\n",
+    "  - [期末資料](計算智能/期末考試（李翠華、曲延雲）/index.ipynb)"
    ]
   },
   {
